[package]
name = "ruxeon-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ruxeon-core = { path = "../ruxeon-core" }
ruxeon-cpu = { path = "../ruxeon-cpu" }
ruxeon-fs = { path = "../ruxeon-fs" }
ruxeon-host = { path = "../ruxeon-host" }
thiserror.workspace = true
